# actix-web-base-app

./: Cargo.toml
src/: lib.rs  main.rs
src/application/: app.rs  mod.rs  user_service.rs
src/application/messages/: user.rs
src/base/: cache.rs  controller.rs  entity.rs  error.rs  messages.rs  mod.rs  repository.rs  service.rs
src/domain/: error.rs  mod.rs
src/domain/model/: user.rs
src/domain/repository/: user_repository.rs
src/domain/service/: user_service.rs
src/infra/: cache.rs  db.rs  mod.rs  repository.rs
src/presentation/: user_controller.rs
