[package]
name = "web_app_skeleton"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.0.0-beta.7"
actix="0.12.0"
actix-rt="2.2.0"
async-trait="0.1.5"
r2d2="0.8.9"
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations="1.4.0"
serde = "1.0.126"
serde_json = "1.0.64"
dotenv="0.15.0"
lazy_static="1.4.0"
